--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictNullChecks": false,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "strictDomEventTypes": false
   }
 }
